--- a/addons/hospital/views/patient.xml
+++ b/addons/hospital/views/patient.xml
@@ -12,6 +12,7 @@
                         <field name="age"/>
                         <field name="age_group"/>
                         <field name="gender"/>
+                        <field name="doctor_id"/>
                     </group>
                     <notebook>
                         <page string="Note">
@@ -34,6 +35,7 @@
                 <field name="age_group"/>
                 <field name="gender"/>
                 <field name="note"/>
+                <field name="doctor_id"/>
             </tree>
         </field>
     </record>
@@ -51,6 +53,50 @@
         </field>
     </record>
 
+    <record model="ir.ui.view" id="view_openacad_patient_kanban">
+        <field name="name">hospital.patient.kanban</field>
+        <field name="model">hospital.patient</field>
+        <field name="arch" type="xml">
+            <kanban default_group_by="doctor_id" group_by_full="true" quick_create="false" group_create="false" group_delete="false" group_edit="false">
+                <field name="color"/>
+                <templates>
+                    <t t-name="kanban-box">
+                        <div t-attf-class="oe_kanban_color_{{kanban_getcolor(record.color.raw_value)}}
+                                                  oe_kanban_global_click_edit oe_semantic_html_override
+                                                  oe_kanban_card {{record.group_fancy==1 ? 'oe_kanban_card_fancy' : ''}}">
+                            <div class="oe_dropdown_kanban">
+                                <!-- dropdown menu -->
+                                <div class="oe_dropdown_toggle">
+                                    <i class="fa fa-bars fa-lg" title="Manage" aria-label="Manage"/>
+                                    <ul class="oe_dropdown_menu">
+                                        <li>
+                                            <a type="delete">Delete</a>
+                                        </li>
+                                        <li>
+                                            <ul class="oe_kanban_colorpicker" data-field="color"/>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="oe_clear"></div>
+                            </div>
+                            <div t-attf-class="oe_kanban_content">
+                                <!-- title -->
+                                    Patient name:
+                                <field name="name"/>
+                                <br/>
+                                    Patient age:
+                                <field name="age"/>
+                                <br/>
+                                    Patient Gender:
+                                <field name="gender"/>
+                            </div>
+                        </div>
+                    </t>
+                </templates>
+            </kanban>
+        </field>
+    </record>
+
     <!-- window action -->
     <!--
             The following tag is an action definition for a "window action",
@@ -60,7 +106,7 @@
         <field name="name">Patients</field>
         <field name="res_model">hospital.patient</field>
         <field name="view_type">form</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">tree,form,kanban</field>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">Create the first patient
             </p>
