--- a/addons/hospital/views/doctor.xml
+++ b/addons/hospital/views/doctor.xml
@@ -11,6 +11,7 @@
                         <field name="name"/>
                         <field name="age"/>
                         <field name="gender"/>
+                        <field name="user_ref"/>
                     </group>
                 </sheet>
             </form>
@@ -26,6 +27,7 @@
                 <field name="name"/>
                 <field name="age"/>
                 <field name="gender"/>
+                <field name="user_ref"/>
             </tree>
         </field>
     </record>
